src/main/jkube/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  labels:
    app: spring-integration-sample
    group: spring-integration-sample
    provider: jkube
  name: metrics
  namespace: launcher-infra
spec:
  host: metrics-launcher-infra.apps.ksr.clusters.its4u.eu
  port:
    targetPort: http
  to:
    kind: Service
    name: metrics
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  wildcardPolicy: None
status:
